# Homework

./: README.md  import .py
.github/workflows/: lab8_testing.yml
Cursovoi-3-2026/: .gitignore  LICENSE  README.md  pyproject.toml
Cursovoi-3-2026/src/: main.py
Cursovoi-3-2026/src/UI/: UI_inner_logic.py  UI_main.py  UI_work_with_widgets.py
Cursovoi-3-2026/src/database/: product_database.py
Cursovoi-3-2026/tests/database/test_product_database/: conftest.py  test_add_selection_products_delete.py  test_bd_is_creating_deliting.py  test_input_validation.py  test_selection_id.py
calc/: calc.py
lab8/: README.txt
lab8/src/: inventory.py  notifier.py  order_processor_facade.py  payment.py  shipping.py  Лабараторная8.py
lab8/tests/: pytest.ini  test_orders.py
ДЗ 07.11.2020/: S = '99'.py  chisla.py
ДЗ 12.12.2020/: import tandom.py  kolvo.py
ДЗ 28.11.2020/: Создайте Пароль.py
ДЗ 31.10.2020/: Камень Ножницы Бумага.py  Числа.py
Домашнее Задание N4/: Лыжник.py  Число.py
Домашнее Задание N4 Исправлено/: Лыжник.py
Урок 19.12.2020/: zadacha.py
Урок 28.11.2020/: Поиск.py
Урок 28.11.2020/Урок 28.11.2020/: Поиск.py
Урок 28.11.2020/Урок 28.11.2020/Урок 28.11.2020/: Введите что зашифровать.py
Урок 4/: gg.py
урок 07.11.2020/: Камень ножницы бумага.py
