# Гайд по этой мути
# https://realpython.com/python-pyproject-toml/
# Гайд по README.md
# https://blog.skillfactory.ru/readme-md-github/#:~:text=README.md%20%E2%80%94%20%D1%8D%D1%82%D0%BE%20%D1%81%D0%BF%D0%B5%D1%86%D0%B8%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9%20%D1%84%D0%B0%D0%B9%D0%BB,%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B8%D1%81%D1%82%2C%20%D0%B8%D1%89%D1%83%D1%89%D0%B8%D0%B9%20%D1%80%D0%B5%D1%88%D0%B5%D0%BD%D0%B8%D0%B5%20%D1%81%D0%B2%D0%BE%D0%B5%D0%B9%20%D0%BF%D1%80%D0%BE%D0%B1%D0%BB%D0%B5%D0%BC%D1%8B
# Гайд по LICENSE
# https://tproger.ru/articles/whats-difference-between-licenses

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scraping"
version = "0.1.0"
description = "Scraping project"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Anbrosenko Daniil" }
]

dependencies = [

]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: быстрые критичные проверки",
    "regression: расширенные проверки логики"
]

# Добавив это можно сделать pip install -e .
[tool.setuptools.packages.find]
where = ["src"]